--- a/strands_pedestrian_localisation/CMakeLists.txt
+++ b/strands_pedestrian_localisation/CMakeLists.txt
@@ -4,10 +4,15 @@ project(strands_pedestrian_localisation)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS geometry_msgs roscpp strands_perception_people_msgs tf)
+find_package(catkin REQUIRED COMPONENTS 
+    geometry_msgs 
+    roscpp 
+    strands_perception_people_msgs 
+    tf
+)
 
 ## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+find_package(Bayestracking REQUIRED)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -48,9 +53,9 @@ find_package(catkin REQUIRED COMPONENTS geometry_msgs roscpp strands_perception_
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS include
 #  LIBRARIES strands_pedestrian_localisation
-#  CATKIN_DEPENDS geometry_msgs roscpp strands_perception_people_msgs tf
+  CATKIN_DEPENDS geometry_msgs roscpp strands_perception_people_msgs tf
 #  DEPENDS system_lib
 )
 
@@ -60,8 +65,10 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include_directories(include
-  ${catkin_INCLUDE_DIRS}
+include_directories(
+    include
+    ${catkin_INCLUDE_DIRS}
+    ${BAYESTRACKING_INCLUDE_DIRS}
 )
 
 ## Declare a cpp library
@@ -70,7 +77,10 @@ include_directories(include
 # )
 
 ## Declare a cpp executable
-add_executable(pedestrian_localisation src/main.cpp)
+add_executable(pedestrian_localisation 
+    #src/pedestrian_localisation/main.cpp
+    src/pedestrian_localisation/pedestrianlocalisation.cpp
+)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
@@ -79,6 +89,7 @@ add_dependencies(pedestrian_localisation ${catkin_EXPORTED_TARGETS})
 ## Specify libraries to link a library or executable target against
 target_link_libraries(pedestrian_localisation
   ${catkin_LIBRARIES}
+  ${BAYESTRACKING_LIBRARIES}
 )
 
 #############
