Adding a logging message which contains the information from the localisation module plus the robot pose.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ add_message_files(
   PedestrianTrackingArray.msg
   PedestrianLocations.msg
   HeadOrientations.msg
+  Logging.msg
 )
 
 # Generate services in the 'srv' folder
