--- a/strands_people_tracker/config/detectors.yaml
+++ b/strands_people_tracker/config/detectors.yaml
@@ -1,12 +1,12 @@
 people_tracker:
-    detectors:
-        upper_body_detector:
-            topic: "/upper_body_detector/bounding_box_centres"
+    detectors:                                                 # Add detectors under this namespace
+        upper_body_detector:                                   # Name of detector (used internally to identify them. Has to be unique.
+            topic: "/upper_body_detector/bounding_box_centres" # The topic on which the geometry_msgs/PoseArray is published
             noise_model:
-                velocity:
+                velocity:                                      # The std deviation for the constanc velocity model
                     x: 1.4
                     y: 1.4
-                position:
+                position:                                      # The std deviation for the cartesien model
                     x: 0.2
                     y: 0.2
-            matching_algorithm: "NNJPDA"
+            matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, JPDA = Joint Probability Data Association, NNJPDA = NN + JPDA
