--- a/strands_people_tracker/CMakeLists.txt
+++ b/strands_people_tracker/CMakeLists.txt
@@ -78,16 +78,16 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-add_executable(people_tracker
+add_executable(strands_people_tracker
   src/people_tracker/people_tracker.cpp
 )
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-add_dependencies(people_tracker ${catkin_EXPORTED_TARGETS})
+add_dependencies(strands_people_tracker ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(people_tracker
+target_link_libraries(strands_people_tracker
   ${catkin_LIBRARIES}
   ${BAYESTRACKING_LIBRARIES}
 )
