--- a/strands_people_tracker/config/detectors.yaml
+++ b/strands_people_tracker/config/detectors.yaml
@@ -9,7 +9,7 @@ strands_people_tracker:
                 position:                                      # The std deviation for the cartesian model
                     x: 1.2
                     y: 1.2
-            matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, JPDA = Joint Probability Data Association, NNJPDA = NN + JPDA
+            matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN + Joint Probability Data Association
         leg_detector:                                          # Name of detector (used internally to identify them. Has to be unique.
             topic: "/to_pose_array/leg_detector"               # The topic on which the geometry_msgs/PoseArray is published
             noise_model:
@@ -19,4 +19,4 @@ strands_people_tracker:
                 position:                                      # The std deviation for the cartesian model
                     x: 0.2
                     y: 0.2
-            matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, JPDA = Joint Probability Data Association, NNJPDA = NN + JPDA
+            matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN + Joint Probability Data Association
