Make the linker happy.
Longer explanation: the mongodb_store links to static libmongoclient.a which needs dynamic libboost-filesystem-mt.so.
The problem is another component links to that boost one too, earlier. So CMake doesn't add that into the linker line
later when mongodb_store kicks in. Moving it to the front fixes it, even though it's not clean.

--- a/strands_head_orientation/CMakeLists.txt
+++ b/strands_head_orientation/CMakeLists.txt
@@ -5,6 +5,7 @@ project(strands_head_orientation)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+    mongodb_store   # NEEDS to come early, else the linker will insult you.
     cv_bridge
     geometry_msgs
     image_transport
@@ -12,8 +13,6 @@ find_package(catkin REQUIRED COMPONENTS
     roscpp
     std_msgs
     message_generation
-    mongodb_store_msgs
-    mongodb_store
     opencv_warco
 )
 
