--- a/strands_head_orientation/package.xml
+++ b/strands_head_orientation/package.xml
@@ -47,6 +47,7 @@
   <build_depend>message_filters</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>mongodb_store</build_depend>
   <build_depend>mongodb_store_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -55,6 +56,7 @@
   <run_depend>message_filters</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>mongodb_store</run_depend>
   <run_depend>mongodb_store_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
