Added LICENSE files. Fixes #101

--- a/upper_body_detector/package.xml
+++ b/upper_body_detector/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>
 
-  <license>TODO</license>
+  <license>BSD</license>
 
   <url type="website">https://github.com/strands-project/strands_perception_people</url>
 
