--- a/odometry_to_motion_matrix/package.xml
+++ b/odometry_to_motion_matrix/package.xml
@@ -14,7 +14,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   
-  <build_depend>eigen</build_depend>
+  <build_depend>cmake_modules</build_depend>
   <build_depend>eigen_conversions</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
@@ -22,7 +22,6 @@
   <build_depend>tf_conversions</build_depend>
   <build_depend>visual_odometry</build_depend>
   
-  <run_depend>eigen</run_depend>
   <run_depend>eigen_conversions</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
