--- a/visual_odometry/package.xml
+++ b/visual_odometry/package.xml
@@ -19,6 +19,7 @@
   <build_depend>boost</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>eigen</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_filters</build_depend>
@@ -28,6 +29,7 @@
 
   <run_depend>boost</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>eigen</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>message_filters</run_depend>
