--- a/visual_odometry/package.xml
+++ b/visual_odometry/package.xml
@@ -26,6 +26,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>tf</build_depend>
 
   <run_depend>boost</run_depend>
   <run_depend>cv_bridge</run_depend>
