--- a/strands_head_orientation/package.xml
+++ b/strands_head_orientation/package.xml
@@ -48,6 +48,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>mongodb_store</build_depend>
   <build_depend>mongodb_store_msgs</build_depend>
+  <build_depend>opencv_warco</build_depend>
   <build_depend>upper_body_detector</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -58,6 +59,8 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>mongodb_store</run_depend>
   <run_depend>mongodb_store_msgs</run_depend>
+  <run_depend>opencv_warco</run_depend>
+  <run_depend>upper_body_detector</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
