--- a/strands_perception_people/package.xml
+++ b/strands_perception_people/package.xml
@@ -21,6 +21,7 @@
   <run_depend>perception_people_launch</run_depend>
   <run_depend>upper_body_detector</run_depend>
   <run_depend>visual_odometry</run_depend>
+  <run_depend>human_trajectory</run_depend>
 
   <export>
     <metapackage/> 
