Publishin people_msgs/People and adding orientation.

--- a/bayes_people_tracker/package.xml
+++ b/bayes_people_tracker/package.xml
@@ -18,6 +18,7 @@
   <build_depend>bayes_tracking</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>people_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
@@ -27,6 +28,7 @@
   <run_depend>bayes_tracking</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>people_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
