--- a/strands_perception_people/package.xml
+++ b/strands_perception_people/package.xml
@@ -22,6 +22,7 @@
   <run_depend>perception_people_launch</run_depend>
   <run_depend>strands_head_orientation</run_depend>
   <run_depend>upper_body_detector</run_depend>
+  <run_depend>vision_people_logging</run_depend>
   <run_depend>visual_odometry</run_depend>
   <run_depend>human_trajectory</run_depend>
 
