--- a/perception_people_launch/package.xml
+++ b/perception_people_launch/package.xml
@@ -24,6 +24,8 @@
   <run_depend>leg_detector</run_depend>
   <run_depend>people_msgs</run_depend>
   <run_depend>bayes_people_tracker_logging</run_depend>
+  <run_depend>map_laser</run_depend>
+  <run_depend>laser_filters</run_depend>
   <!--<run_depend>strands_ground_hog</run_depend>-->
 
   <export/>
