--- a/strands_perception_people/package.xml
+++ b/strands_perception_people/package.xml
@@ -26,6 +26,7 @@
   <run_depend>visual_odometry</run_depend>
   <run_depend>human_trajectory</run_depend>
   <run_depend>people_tracker_emulator</run_depend>
+  <run_depend>people_tracker_filter</run_depend>
 
   <export>
     <metapackage/>
