--- a/rwth_upper_body_skeleton_random_walk/package.xml
+++ b/rwth_upper_body_skeleton_random_walk/package.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.3.1"?>
 <package>
   <name>rwth_upper_body_skeleton_random_walk</name>
   <version>0.0.0</version>
@@ -7,13 +7,13 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="mmp@todo.todo">mmp</maintainer>
+  <maintainer email="rafi@vision.rwth-aachen.de">Umer Rafi</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
