--- a/wheelchair_detector/package.xml
+++ b/wheelchair_detector/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="hermans@vision.rwth-aachen.de">hermans</maintainer>
+  <maintainer email="hermans@vision.rwth-aachen.de">Alexander Hermans</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
