--- a/wheelchair_detector/package.xml
+++ b/wheelchair_detector/package.xml
@@ -44,6 +44,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>wget</build_depend>
   
 
   <run_depend>rospy</run_depend>
