--- a/skeletons_cnn/package.xml
+++ b/skeletons_cnn/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package>
   <name>skeletons_cnn</name>
-  <version>0.0.0</version>
+  <version>1.0</version>
   <description>The skeletons_cnn package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="rafi@todo.todo">rafi</maintainer>
+  <maintainer email="rafi@vision.rwth-aachen.de">rafi</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
