--- a/bayes_people_tracker/config/detectors_test.yaml
+++ b/bayes_people_tracker/config/detectors_test.yaml
@@ -5,7 +5,7 @@ bayes_people_tracker:
         y: 1.4
     detectors:                                                 # Add detectors under this namespace
         upper_body_detector:                                   # Name of detector (used internally to identify them). Has to be unique.
-            topic: "/upper_body_detector/bounding_box_centres" # The topic on which the geometry_msgs/PoseArray is published
+            people_topic: "/upper_body_detector/bounding_box_centres" # The topic on which the geometry_msgs/PoseArray is published
             cartesian_noise_params:                            # The noise for the cartesian observation model
                 x: 0.5
                 y: 0.5
@@ -24,4 +24,4 @@ bayes_people_tracker:
                 x: 0.25
                 y: 0.25
             observation_model: "CARTESIAN"
-            matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN Joint Probability Data Association
+            matching_algorithm: "NN"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN Joint Probability Data Association
