--- a/bayes_people_tracker/config/detectors_test.yaml
+++ b/bayes_people_tracker/config/detectors_test.yaml
@@ -4,24 +4,17 @@ bayes_people_tracker:
         x: 1.4
         y: 1.4
     detectors:                                                 # Add detectors under this namespace
-        upper_body_detector:                                   # Name of detector (used internally to identify them). Has to be unique.
-            people_topic: "/upper_body_detector/bounding_box_centres" # The topic on which the geometry_msgs/PoseArray is published
-            cartesian_noise_params:                            # The noise for the cartesian observation model
-                x: 0.5
-                y: 0.5
-            observation_model: "CARTESIAN"
-            matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN Joint Probability Data Association
-        leg_detector:                                          # Name of detector (used internally to identify them). Has to be unique.
-            topic: "/to_pose_array/leg_detector"               # The topic on which the geometry_msgs/PoseArray is published
+        # identifying_detector:                                   # Name of detector (used internally to identify them). Has to be unique.
+        #     people_topic: "/people" # The topic on which the geometry_msgs/PoseArray is published
+        #     cartesian_noise_params:                            # The noise for the cartesian observation model
+        #         x: 0.5
+        #         y: 0.5
+        #     observation_model: "CARTESIAN"
+        #     matching_algorithm: "NN"                   # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN Joint Probability Data Association
+        anonymous_detector:                                          # Name of detector (used internally to identify them). Has to be unique.
+            topic: "/poses"               # The topic on which the geometry_msgs/PoseArray is published
             cartesian_noise_params:                            # The noise for the cartesian observation model
                 x: 0.2
                 y: 0.2
-            observation_model: "CARTESIAN"
-            matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN Joint Probability Data Association
-        mobility_aid_detector:                                 # Name of detector (used internally to identify them). Has to be unique.
-            topic: "/mobility_aid_detections"                  # The topic on which the geometry_msgs/PoseArray is published
-            cartesian_noise_params:                            # The noise for the cartesian observation model
-                x: 0.25
-                y: 0.25
             observation_model: "CARTESIAN"
             matching_algorithm: "NN"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN Joint Probability Data Association
