--- a/bayes_people_tracker/config/detectors_test.yaml
+++ b/bayes_people_tracker/config/detectors_test.yaml
@@ -1,5 +1,6 @@
 bayes_people_tracker:
     filter_type: "EKF"                                          # The Kalman filter type: EKF = Extended Kalman Filter, UKF = Uncented Kalman Filter
+    prune_named: true                                           # make sure identity tracks are unique (prunes the one with high stdev)
     cv_noise_params:                                            # The noise for the constant velocity prediction model
         x: 0.4
         y: 0.4
