--- a/bayes_people_tracker/config/detectors.yaml
+++ b/bayes_people_tracker/config/detectors.yaml
@@ -9,16 +9,19 @@ bayes_people_tracker:
             cartesian_noise_params:                            # The noise for the cartesian observation model
                 x: 0.5
                 y: 0.5
+            observation_model: "CARTESIAN"
             matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN Joint Probability Data Association
         leg_detector:                                          # Name of detector (used internally to identify them). Has to be unique.
             topic: "/to_pose_array/leg_detector"               # The topic on which the geometry_msgs/PoseArray is published
             cartesian_noise_params:                            # The noise for the cartesian observation model
                 x: 0.2
                 y: 0.2
+            observation_model: "CARTESIAN"
             matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN Joint Probability Data Association
         mobility_aid_detector:                                 # Name of detector (used internally to identify them). Has to be unique.
             topic: "/mobility_aid_detections"                  # The topic on which the geometry_msgs/PoseArray is published
             cartesian_noise_params:                            # The noise for the cartesian observation model
                 x: 0.25
                 y: 0.25
+            observation_model: "CARTESIAN"
             matching_algorithm: "NNJPDA"                       # The algorthim to match different detections. NN = Nearest Neighbour, NNJPDA = NN Joint Probability Data Association
